"Updated User controller, model, and routes: added createOauthUser function, modified createUser and loginUser functions, and updated user schema."

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGO_URL =  mongodb+srv://prem:prem1213@cluster0.3od4hvy.mongodb.net/jobapp
 PORT = 5000
 
 JWT_SECRET = XZJHFA932JH2H1H45JF46A8FHGK3N4J56H7GH4N
+
+
+AUTH_SECRET= wbgscSpb19XVo5SvJJGa2l8cRcnPB67KkM0Gbdzn8rg=
+AUTH_URL = http://localhost:5000/api/auth
